@@ -1,6 +1,6 @@
 <?php
 $version = '0.9.6.2';   // Current version
-$code_name = 'rev 4089';    // SVN version number
+$code_name = 'rev 4090';    // SVN version number
 $full_appname = 'MODx'.' '.$version.($code_name ? " ($code_name)":"");
 $small_version = '0';
 $patch_level = '0';
